# pywarp

./: Cargo.toml  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt
docs/: TASKS.md  guide.md
docs/guide/: energy_conditions.md  features.md  index.md  installation.md  metrics.md  troubleshooting.md  units.md  workflows.md
notebooks/: intro.ipynb  rust_demo.ipynb
rust/warp_core/: Cargo.toml
rust/warp_core/src/: lib.rs
scripts/: install.sh
tests/: test_change_tensor_index.py  test_cov_div.py  test_do_frame_transfer.py  test_energy_conditions.py  test_eulerian_transform.py  test_eval_metric.py  test_frame_transfer.py  test_get_energy_conditions.py  test_get_energy_tensor.py  test_get_energy_tensor_gpu.py  test_get_momentum_flow_lines.py  test_get_scalars.py  test_metrics.py  test_rust_extension.py  test_simulation.py  test_time_evolution.py  test_verify_tensor.py  test_visualizer.py
warp/: __init__.py  core.py
warp/analyzer/: change_tensor_index.py  do_frame_transfer.py  eval_metric.py  get_energy_conditions.py  get_momentum_flow_lines.py  get_scalars.py  utils.py
warp/metrics/: __init__.py  get_alcubierre.py  get_minkowski.py  utils.py
warp/pipeline/: __init__.py  simulation.py  time_evolution.py
warp/solver/: __init__.py  conftest.py  get_energy_tensor.py  verify_tensor.py
warp/solver/rust/ricci_core/: Cargo.toml
warp/solver/rust/ricci_core/src/: lib.rs
warp/visualizer/: __init__.py  plot_tensor.py
