[package]
name = "warp_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "warp_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"
ndarray = { version = "0.15", features = ["serde", "rayon"] }
nalgebra = { version = "0.32" }
